--- a/Guess the number game/src/index.css
+++ b/Guess the number game/src/index.css
@@ -66,3 +66,6 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+body{
+  background-image: linear-gradient(to right,yellow,pink,orange,green);
+}
